tests/baselines/reference/staticOffOfInstance2.errors.txt
tests/cases/compiler/staticOffOfInstance2.ts(3,14): error TS2339: Property 'Foo' does not exist on type 'List<T>'.


==== tests/cases/compiler/staticOffOfInstance2.ts (1 errors) ====
    class List<T> {
        public Blah() {
            this.Foo(); // no error
                 ~~~
!!! error TS2339: Property 'Foo' does not exist on type 'List<T>'.
            List.Foo();
        }
        public static Foo() { }
    }
    